# libsoup

./: ChangeLog  Makefile.am  TODO  acinclude.m4  configure.in
libsoup/: .cvsignore  Makefile.am  soup-address.c  soup-address.h  soup-auth-basic.c  soup-auth-basic.h  soup-auth-context.c  soup-auth-context.h  soup-auth-digest.c  soup-auth-digest.h  soup-auth-domain.c  soup-auth.c  soup-auth.h  soup-cache.c  soup-cache.h  soup-coding-deflate.c  soup-coding-deflate.h  soup-coding-gzip.c  soup-coding-gzip.h  soup-coding-zlib.c  soup-coding-zlib.h  soup-connection-ntlm.c  soup-connection.c  soup-connection.h  soup-content-decoder.c  soup-content-sniffer.c  soup-content-sniffer.h  soup-context.c  soup-context.h  soup-cookie.c  soup-directory-input-stream.c  soup-directory-input-stream.h  soup-dns.c  soup-dns.h  soup-error.c  soup-error.h  soup-ftp-connection.c  soup-ftp-connection.h  soup-ftp-input-stream.c  soup-ftp-input-stream.h  (+76 more)
mono/: Makefile.am  Soup.metadata  libsoup.sources
python/: Makefile.am  libsoup.defs  libsoup.override  libsoupmodule.c
tests/: .cvsignore  Makefile.am  auth-test.c  cache-test.c  chunk-test.c  context-test.c  continue-test.c  dns.c  forms-test.c  get.c  header-parsing.c  httpd.conf.in  misc-test.c  redirect-test.c  revserver.c  server-auth-test.c  simple-httpd.c  simple-proxy.c  sniffing-test.c  test-utils.c  timeout-test.c  timeserver.c  uri-parsing.c
tests/resources/: atom.xml  rss20.xml
